sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:20: error: not found: value c
    setValeur(i-c,v)
                ^